(lang dune 3.12)

(name first)

(generate_opam_files true)

(source
 (github arpangreat/ocaml-examples))

(authors "Swastik Acharyya")

(maintainers "Swastik Acharyya")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name first)
 (synopsis "My first OCaml learning project")
 (description "This is my first OCaml project for dumping every beginner theory")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
